[VAS-506] swagger cosmetic change
