# openapi/openapi_backoffice_helpdesk.json
@@ -1,168 +1,176 @@
 {
-  "openapi": "3.0.1",
-  "info": {
-    "description": "Microservice to expose REST API to contact PagoPA Backoffice",
-    "termsOfService": "https://www.pagopa.gov.it/",
-    "title": "Backoffice External",
-    "version": "1.0.5"
+  "openapi" : "3.0.1",
+  "info" : {
+    "description" : "Microservice to expose REST API to contact PagoPA Backoffice",
+    "termsOfService" : "https://www.pagopa.gov.it/",
+    "title" : "Backoffice External",
+    "version" : "1.0.2"
   },
-  "servers": [
-    {
-      "url": "http://localhost:8080"
-    },
-    {
-      "url": "https://{host}{basePath}",
-      "variables": {
-        "basePath": {
-          "default": "/backoffice/external/v1"
-        },
-        "host": {
-          "default": "api.dev.platform.pagopa.it",
-          "enum": [
-            "api.dev.platform.pagopa.it",
-            "api.uat.platform.pagopa.it",
-            "api.platform.pagopa.it"
-          ]
-        }
+  "servers" : [ {
+    "url" : "http://localhost:8080"
+  }, {
+    "url" : "https://{host}{basePath}",
+    "variables" : {
+      "basePath" : {
+        "default" : "/backoffice/external/v1",
+        "enum" : [ "/backoffice/external/v1", "/backoffice/helpdesk/v1" ]
+      },
+      "host" : {
+        "default" : "api.dev.platform.pagopa.it",
+        "enum" : [ "api.dev.platform.pagopa.it", "api.uat.platform.pagopa.it", "api.platform.pagopa.it" ]
       }
     }
-  ],
-  "paths": {
-    "/info": {
-      "get": {
-        "description": "Return OK if application is started",
-        "operationId": "healthCheck",
-        "responses": {
-          "200": {
-            "content": {
-              "*/*": {
-                "schema": {
-                  "$ref": "#/components/schemas/AppInfo"
+  } ],
+  "paths" : {
+    "/info" : {
+      "get" : {
+        "description" : "Return OK if application is started",
+        "operationId" : "healthCheck",
+        "responses" : {
+          "200" : {
+            "content" : {
+              "*/*" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/AppInfo"
                 }
               }
             },
-            "description": "OK"
+            "description" : "OK",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
           }
         },
-        "security": [
-          {
-            "ApiKey": []
-          }
-        ],
-        "summary": "health check",
-        "tags": [
-          "Home"
-        ]
-      }
+        "security" : [ {
+          "ApiKey" : [ ]
+        } ],
+        "summary" : "health check",
+        "tags" : [ "Home" ]
+      },
+      "parameters" : [ {
+        "description" : "This header identifies the call, if not passed it is self-generated. This ID is returned in the response.",
+        "in" : "header",
+        "name" : "X-Request-Id",
+        "schema" : {
+          "type" : "string"
+        }
+      } ]
     },
-    "/operative-tables": {
-      "get": {
-        "operationId": "getOperativeTables",
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/OperativeTableResourceList"
+    "/operative_tables" : {
+      "get" : {
+        "description" : "Internal | External | Synchronous | Authorization | Authentication | TPS | Idempotency | Stateless | Read/Write Intense | Cacheable\n-|-|-|-|-|-|-|-|-|-\nY | N | Y | ApiKey | ApiKey | 1.0/sec | Y | Y |  | N\n",
+        "operationId" : "getOperativeTables",
+        "responses" : {
+          "200" : {
+            "content" : {
+              "application/json" : {
+                "schema" : {
+                  "$ref" : "#/components/schemas/OperativeTableResourceList"
                 }
               }
             },
-            "description": "OK"
+            "description" : "OK",
+            "headers" : {
+              "X-Request-Id" : {
+                "description" : "This header identifies the call",
+                "schema" : {
+                  "type" : "string"
+                }
+              }
+            }
           }
         },
-        "security": [
-          {
-            "ApiKey": []
-          }
-        ],
-        "summary": "Get All operative tables",
-        "tags": [
-          "Operative Tables"
-        ]
-      }
+        "security" : [ {
+          "ApiKey" : [ ]
+        } ],
+        "summary" : "Get All operative tables",
+        "tags" : [ "Operative Tables" ]
+      },
+      "parameters" : [ {
+        "description" : "This header identifies the call, if not passed it is self-generated. This ID is returned in the response.",
+        "in" : "header",
+        "name" : "X-Request-Id",
+        "schema" : {
+          "type" : "string"
+        }
+      } ]
     }
   },
-  "components": {
-    "schemas": {
-      "AppInfo": {
-        "type": "object",
-        "properties": {
-          "environment": {
-            "type": "string"
+  "components" : {
+    "schemas" : {
+      "AppInfo" : {
+        "type" : "object",
+        "properties" : {
+          "environment" : {
+            "type" : "string"
           },
-          "name": {
-            "type": "string"
+          "name" : {
+            "type" : "string"
           },
-          "version": {
-            "type": "string"
+          "version" : {
+            "type" : "string"
           }
         }
       },
-      "OperativeTable": {
-        "required": [
-          "createdBy",
-          "email",
-          "modifiedAt",
-          "modifiedBy",
-          "name",
-          "referent",
-          "taxCode",
-          "telephone"
-        ],
-        "type": "object",
-        "properties": {
-          "createdAt": {
-            "type": "string",
-            "format": "date-time"
+      "OperativeTable" : {
+        "required" : [ "createdBy", "email", "modifiedAt", "modifiedBy", "name", "referent", "taxCode", "telephone" ],
+        "type" : "object",
+        "properties" : {
+          "createdAt" : {
+            "type" : "string",
+            "format" : "date-time"
           },
-          "createdBy": {
-            "type": "string"
+          "createdBy" : {
+            "type" : "string"
           },
-          "email": {
-            "type": "string"
+          "email" : {
+            "type" : "string"
           },
-          "modifiedAt": {
-            "type": "string",
-            "format": "date-time"
+          "modifiedAt" : {
+            "type" : "string",
+            "format" : "date-time"
           },
-          "modifiedBy": {
-            "type": "string"
+          "modifiedBy" : {
+            "type" : "string"
           },
-          "name": {
-            "type": "string"
+          "name" : {
+            "type" : "string"
           },
-          "referent": {
-            "type": "string"
+          "referent" : {
+            "type" : "string"
           },
-          "taxCode": {
-            "type": "string"
+          "taxCode" : {
+            "type" : "string"
           },
-          "telephone": {
-            "type": "string"
+          "telephone" : {
+            "type" : "string"
           }
         }
       },
-      "OperativeTableResourceList": {
-        "required": [
-          "operativeTableList"
-        ],
-        "type": "object",
-        "properties": {
-          "operativeTableList": {
-            "type": "array",
-            "items": {
-              "$ref": "#/components/schemas/OperativeTable"
+      "OperativeTableResourceList" : {
+        "required" : [ "operativeTableList" ],
+        "type" : "object",
+        "properties" : {
+          "operativeTableList" : {
+            "type" : "array",
+            "items" : {
+              "$ref" : "#/components/schemas/OperativeTable"
             }
           }
         }
       }
     },
-    "securitySchemes": {
-      "ApiKey": {
-        "description": "The Azure Subscription Key to access this API.",
-        "in": "header",
-        "name": "Ocp-Apim-Subscription-Key",
-        "type": "apiKey"
+    "securitySchemes" : {
+      "ApiKey" : {
+        "description" : "The Azure Subscription Key to access this API.",
+        "in" : "header",
+        "name" : "Ocp-Apim-Subscription-Key",
+        "type" : "apiKey"
       }
     }
   }
