# src/main/java/it/pagopa/selfcare/pagopa/controller/OperativeTableController.java
@@ -15,7 +15,7 @@ import org.springframework.web.bind.annotation.ResponseStatus;
 import org.springframework.web.bind.annotation.RestController;
 
 @RestController
-@RequestMapping(value = "/operative-tables")
+@RequestMapping(value = "/operative_tables")
 @Tag(name = "Operative Tables")
 public class OperativeTableController {
 
